--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,5 +1,5 @@
 body {
-  font: 16px/1.5 'Roboto', Helvetica, Arial, sans-serif;
+  font: 16px/1.5 Roboto, Helvetica, Arial, sans-serif;
   -webkit-text-size-adjust: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
