--- a/src/modules/layout/layout.wp.pug
+++ b/src/modules/layout/layout.wp.pug
@@ -22,10 +22,10 @@ html(lang="ru")
     link(href="${require('../images/content/favicon-16x16.png')}" rel="icon" sizes="16x16" type="image/png")
     link(href="${require('../images/content/favicon-ios-180x180.png')}" rel="apple-touch-icon" sizes="180x180")
     link(href="${require('../images/content/favicon-macos.svg')}" rel="mask-icon" color="#5bbad5")
-    link(href="styles/main.css" rel="stylesheet")
-    script(src="scripts/main.js" defer)
+    link(href="/styles/main.css" rel="stylesheet")
+    script(src="/scripts/main.js" defer)
   body.body_hidden
-    .svg-sprite#svg-sprite(data-path="images/sprite.svg")
+    .svg-sprite#svg-sprite(data-path="/images/sprite.svg")
     +preloader
     +modal
     +burger
