--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,3 @@
-$black:             #000000;
-$white:             #ffffff;
-$blue:              #269bff;
-$red:               #ff2626;
-
 $grid-gutter-width-xs: 20px;
 $grid-gutter-width-sm: 25px;
 $grid-gutter-width: 25px;
@@ -24,3 +19,10 @@ $grid-breakpoints: (
   /*xxl: 1600px,*/
   /*xxxl: 1920px*/
 );
+
+:root {
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-blue: #269bff;
+  --color-red: #ff2626;
+}
